tests/snapshots/error_cases__float_denom_rational_not_supported.snap
---
source: tests/error_cases.rs
expression: error_json
---
[
  {
    "severity": "Error",
    "code": null,
    "message": "invalid syntax, expected: <end of file>",
    "labels": [
      {
        "style": "Primary",
        "file_id": null,
        "range": {
          "start": 5,
          "end": 6
        },
        "message": ""
      }
    ],
    "notes": []
  }
]
